ASI-2524 Adaptive storage support for Torii v0.8.4
- move code from Beta's github account to socialcode

--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,9 @@
-/bower_components
-/config/ember-try.js
-/dist
-/tests
+/node_modules/
 /tmp
-**/.gitkeep
-.bowerrc
-.editorconfig
-.ember-cli
-.gitignore
-.eslintrc.js
-.watchmanconfig
-.travis.yml
+/bower_components/
+/tasks/
+/tmp/
+/example/
+testem.json
+yuidoc.json
 bower.json
-ember-cli-build.js
-testem.js
