--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,13 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
-/dist
-/tmp
-
-# dependencies
 /node_modules
+/tmp
+/dist
 /bower_components
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage/*
-/libpeerconnection.log
-npm-debug.log*
-yarn-error.log
-testem.log
-
 /doc
 /app-addon
 /vendor-addon
+
 .DS_Store
 *.un~
 *.swp
 .ackrc
-
-# ember-try
-.node_modules.ember-try/
-bower.json.ember-try
-package.json.ember-try
+npm-debug.log
