--- a/package.json
+++ b/package.json
@@ -1,17 +1,76 @@
 {
   "name": "torii",
-  "version": "0.9.6",
+  "version": "3.0.0",
   "description": "A set of clean abstractions for authentication in Ember.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "main": "index.js",
+  "files": [
+    "index.js",
+    "addon/",
+    "app/",
+    "test-support/",
+    "bower.json"
+  ],
+  "ember-addon": {
+    "demoUrl": "http://vestorly.github.io/torii/demo.html",
+    "configPath": "tests/dummy/config"
+  },
+  "devDependencies": {
+    "broccoli-asset-rev": "^2.1.2",
+    "connect-redirection": "0.0.1",
+    "ember-cli": "1.13.8",
+    "ember-cli-app-version": "0.5.0",
+    "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dependency-checker": "^1.0.1",
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-cli-htmlbars-inline-precompile": "^0.2.0",
+    "ember-cli-ic-ajax": "0.2.1",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-qunit": "^1.0.0",
+    "ember-cli-release": "0.2.3",
+    "ember-cli-sri": "^1.0.3",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-disable-prototype-extensions": "^1.0.0",
+    "ember-disable-proxy-controllers": "^1.0.0",
+    "ember-export-application-global": "^1.0.3",
+    "ember-try": "^0.2.12",
+    "jshint": "~2.5.6"
+  },
+  "scripts": {
+    "test": "ember try:testall"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/vestorly/torii.git"
+  },
+  "bugs": {
+    "url": "https://github.com/vestorly/torii/issues"
+  },
   "keywords": [
     "authentication",
     "ember.js",
     "ember-addon"
   ],
-  "license": "MIT",
   "author": {
     "name": "Vestorly",
     "email": "hello@vestorly.com"
   },
+  "contributors": [
+    {
+      "name": "Matt Beale",
+      "email": "matt.beale@madhatted.com"
+    },
+    {
+      "name": "Cory Forsyth",
+      "email": "cory.forsyth@gmail.com"
+    },
+    {
+      "name": "Vestorly",
+      "email": "hello@vestorly.com"
+    }
+  ],
   "maintainers": [
     {
       "name": "Matt Beale",
@@ -22,56 +81,11 @@
       "email": "cory.forsyth@gmail.com"
     }
   ],
-  "directories": {
-    "lib": "lib"
-  },
-  "files": [
-    "index.js",
-    "addon/",
-    "app/",
-    "public/",
-    "test-support/",
-    "bower.json"
-  ],
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/vestorly/torii.git"
-  },
-  "bugs": {
-    "url": "https://github.com/vestorly/torii/issues"
-  },
-  "scripts": {
-    "test": "ember try:each"
-  },
+  "license": "MIT",
   "dependencies": {
-    "ember-cli-babel": "^6.3.0"
-  },
-  "devDependencies": {
-    "bower": "^1.8.0",
-    "broccoli-asset-rev": "^2.4.5",
-    "ember-cli": "~2.15.0",
-    "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-eslint": "^4.2.0",
-    "ember-cli-htmlbars": "^2.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
-    "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.0.1",
-    "ember-cli-shims": "^1.1.0",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.1.2",
-    "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.5.0",
-    "ember-source": "~2.15.0",
-    "loader.js": "^4.2.3"
-  },
-  "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
-  },
-  "ember-addon": {
-    "demoUrl": "http://vestorly.github.io/torii/demo.html",
-    "configPath": "tests/dummy/config"
+    "broccoli-funnel": "^1.0.1",
+    "broccoli-merge-trees": "^1.1.1",
+    "broccoli-string-replace": "^0.1.1",
+    "ember-cli-babel": "^5.1.3"
   }
 }
